# sinicus_rna_analysis

./: .gitignore  README.md  combine_transcript_data.py  denovo.sh  pyproject.toml  reference_pipeline.sh  sinicus_pred_ifitm3_x2.fasta
R_files/: plot.r
aux_scripts/: tabulate_tx.py
data/denovo_results/SRR1048140/: SRR1048140_combined_data.csv
data/denovo_results/SRR1048142/: SRR1048142_combined_data.csv
data/denovo_results/SRR1584445/: SRR1584445_combined_data.csv
data/denovo_results/SRR1584446/: SRR1584446_combined_data.csv
data/denovo_results/SRR1584447/: SRR1584447_combined_data.csv
data/denovo_results/SRR2153217/: SRR2153217_combined_data.csv
data/denovo_results/SRR2273738/: SRR2273738_combined_data.csv
data/denovo_results/SRR2273739/: SRR2273739_combined_data.csv
data/denovo_results/SRR2273740/: SRR2273740_combined_data.csv
data/denovo_results/SRR2273762/: SRR2273762_combined_data.csv
data/denovo_results/SRR2273816/: SRR2273816_combined_data.csv
data/denovo_results/SRR2273875/: SRR2273875_combined_data.csv
data/denovo_results/SRR2273931/: SRR2273931_combined_data.csv
data/denovo_results/SRR2754983/: SRR2754983_combined_data.csv
data/denovo_results/SRR2757329/: SRR2757329_combined_data.csv
