[tool.poetry]
name = "sinicus-rna-analysis"
version = "0.1.0"
description = ""
authors = ["Jordan Taylor <jtaylor81284@hotmail.com>"]
readme = "README.md"
packages = [{include = "sinicus_rna_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.81"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
